--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
-project(anomaly_detection_util)
+project(AnomalyDetector)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(anomaly_detection_util MainTrain.cpp anomaly_detection_util.cpp anomaly_detection_util.h)
+add_executable(anomaly_detection_util MainTrain.cpp anomaly_detection_util.cpp anomaly_detection_util.h timeseries.cpp timeseries.h SimpleAnomalyDetector.h SimpleAnomalyDetector.cpp AnomalyDetector.h)
